<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buxfer</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Buxfuer</string>
    <string name="loadding">Loadding....</string>
    <string name="status">Status</string>
    <string name="usernmae">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="login_status">Login Status</string>
    <string name="results">Results (0)</string>
    <string name="title_activity_dashboard">List Of Transation</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_add_transactionx">Add Transaction </string>
    <string name="transaction">Transaction</string>
    <string name="tag">Tag</string>
    <string name="amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transfer">Transfer</string>
    <string name="accounts">Accounts</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    


</resources>
