<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtVLoginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnLogin"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFUsername"
        android:contentDescription="@string/app_name"
        android:src="@drawable/buxfer_logo" />

    <EditText
        android:id="@+id/txtFUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFPassword"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/usernmae"
        android:inputType="textPersonName"
        android:windowSoftInputMode="stateVisible|adjustResize"
        android:text="" />

    <EditText
        android:id="@+id/txtFPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:windowSoftInputMode="stateVisible|adjustResize"
        android:text="" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/txtFPassword"
        android:layout_below="@+id/txtFPassword"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

</RelativeLayout>