<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TransactionActivity" >

        <TextView
            android:id="@+id/txtVRequestStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnAddTransaction"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/btnAddTransaction"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rdogrpTransactionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rdoExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/expense" />

            <RadioButton
                android:id="@+id/rdoIncome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/income" />

            <RadioButton
                android:id="@+id/rdoTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transfer" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtFTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdogrpTransactionType"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/transaction"
            android:inputType="textPersonName"
            android:windowSoftInputMode="stateVisible|adjustResize" />
            <requestFocus />
        <EditText
            android:id="@+id/txtFAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFTransaction"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:windowSoftInputMode="stateVisible|adjustResize" >

        </EditText>

        <Spinner
            android:id="@+id/spinSTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinSAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinSTag"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinSAccount2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinSAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAddTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinSAccount2"
            android:layout_below="@+id/spinSAccount2"
            android:layout_marginTop="15dp"
            android:text="@string/add" />
    </RelativeLayout>

</ScrollView>