<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:paddingRight="6dp" >

    <LinearLayout
        android:id="@+id/LinearLine1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtVTransactionTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/title_activity_add_transactionx"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtVTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLine2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtVTransactionTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/title_activity_add_transactionx"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtVTransactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:singleLine="true"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLine3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/imgVTransactionType"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="left"
            android:layout_marginRight="10dp" />
        
        <TextView
            android:id="@+id/txtVTransactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"/>




    </LinearLayout>

</LinearLayout>